--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -12,7 +12,7 @@
     "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
-    "strictNullChecks": false, // mudar para true no futuro
+    "strictNullChecks": true, // tira casaco, bota casaco
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
